--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <p class="GameDesc">You have to stop cat from eating chocolates. Can you stop the unstoppable??</p>
   <button class="startBUtton" onclick="GamePageRedirect()">Start</button>
   <audio autoplay hidden loop preload="auto">
-    <source src="/sounds/playful-short-version-168406.mp3">
+    <source src="./sounds/playful-short-version-168406.mp3">
   </audio>
   <script src="script.js"></script>
 </body>
