--- a/gameOver.html
+++ b/gameOver.html
@@ -21,7 +21,7 @@
   <p class="GameTitle" style="margin-top: 20px; font-size: 15px;">Comming Soon with my Discord Community ^_^</p>
 
   <audio autoplay hidden loop preload="auto">
-    <source src="/sounds/playful-short-version-168406.mp3">
+    <source src="./sounds/playful-short-version-168406.mp3">
   </audio>
   <script src="script.js"></script>
 </body>
