--- a/game.html
+++ b/game.html
@@ -17,7 +17,7 @@
   <img class="cat" alt="cat" src="assets/cat.png" />
   <script src="script.js"></script>
   <audio controls autoplay hidden loop preload="auto">
-    <source src="/sounds/playing-in-color-120336.mp3">
+    <source src="./sounds/playing-in-color-120336.mp3">
   </audio>
 </body>
 
