--- a/gameOver.html
+++ b/gameOver.html
@@ -14,7 +14,7 @@
 
   <p class="GameTitle" style="margin-top: 100px; font-size: 15px;">Want to make my day?? Give this project a like on
     Github</p>
-  <a href="" class="GameTitle">Github</a>
+  <a href="https://github.com/Cat-The-Developer/Cat-Game" class="GameTitle">Github</a>
   <p class="GameTitle" style="margin-top: 20px; font-size: 15px;">Below is my social account</p>
   <a href="https://www.instagram.com/synthetix.ai/" class="GameTitle">Instagram</a>
   <p class="GameTitle" style="margin-top: 20px; font-size: 15px;">Comming Soon with my Discord Community ^_^</p>
