--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Cat Game</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.min.css">
 </head>
 
 <body>
@@ -15,7 +15,7 @@
   <audio autoplay hidden loop preload="auto">
     <source src="./sounds/playful-short-version-168406.mp3">
   </audio>
-  <script src="script.js"></script>
+  <script src="script.min.js"></script>
 </body>
 
 </html>
