--- a/game.html
+++ b/game.html
@@ -15,7 +15,7 @@
     <h1 class="displayingScore"></h1>
   </div>
   <img class="cat" alt="cat" src="assets/cat.png" />
-  <script src="script.js"></script>
+  <script src="script.min.js"></script>
   <audio controls autoplay hidden loop preload="auto">
     <source src="./sounds/playing-in-color-120336.mp3">
   </audio>
