--- a/game.html
+++ b/game.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0 user-scalable=no">
   <title>cat game</title>
-  <link rel="stylesheet" href="game.css">
+  <link rel="stylesheet" href="game.min.css">
 </head>
 
 <body class="gameBoard">
